[package]
name = "parlerr"
version = "0.1.0"
authors = ["Cam Cope <github@camcope.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
indicatif = { version = "0.15.0", features = ["rayon"] }
rayon = "*"
serde_json = "*"
tracing = "*"
