[package]
name = "parlerr"
version = "0.1.0"
authors = ["Cam Cope <github@camcope.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "*"
indicatif = { version = "0.15.0", features = ["rayon"] }
parking_lot = "0.11"
rayon = "*"
serde_json = "*"
# { version: "*", features = ["traced-errors"] }
tracing = "*"
tracing-error = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }

[profile.dev.package.backtrace]
opt-level = 3